# knowledge_extraction

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  EMBEDDING_MIGRATION.md  Pyright_fixes_plan.md  README.md  constants.py  create_fulltext_index.cql  create_message_fulltext_index.cql  db_utils.py  dedup_prompt_improvements.md  deduplicate_facts.py  deduplicate_facts_spec.md  fact_category_templates_spec.md  facts_to_graph.py  import_discord_json.py  improvements.md  ingest.cql  loader.py  main.py  member_naming_issue.md  memory_agent_bugs.md  memory_agent_iteration_improvements.md  pyproject.toml  pyrightconfig.json  run_ie.py  run_pipeline.py  schema.sql  test_writing_plan.md  vulture_whitelist.full.txt  vulture_whitelist.py
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  environment_variables.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
data_structures/ingestion/: __init__.py  models.py  timestamps.py
deduplicate/: __init__.py  core.py  display.py  logging_support.py  models.py  partitioning.py  persistence.py  progress.py
deduplicate/llm/: client.py  parser.py  prompts.py
deduplicate/similarity/: embeddings.py  grouping.py  minhash_lsh.py
docs/: embedded_messages_feature.md  hybrid_search_implementation_spec.md  memory_agent_architecture_review.md  memory_agent_feature.md  memory_agent_feature_implementation_plan.md  memory_agent_improvements_v2.md  memory_agent_prompt_improvements.md  memory_retrieve_improvements_plan.md  profile_generation_architecture.md  semantic_message_search_change.md  semantic_search_rrf_implementation_plan.md
ie/: __init__.py  advanced_prompts.py  client.py  config.py  models.py  prompt_assets.json  prompts.py  runner.py  types.py  windowing.py
memory_agent/: __init__.py  agent.py  app.py  config.py  context_summarizer.py  conversation.py  embedding_pipeline.py  embedding_utils.py  embeddings.py  fact_formatter.py  llm.py  message_embedding_pipeline.py  message_formatter.py  models.py  normalization.py  query_fallback.py  request_logger.py  serialization.py  state.py
memory_agent/assets/: semantic_message_blacklist.json
memory_agent/tools/: __init__.py  base.py  (+12 more)
scripts/: check_wal_status.py  embed_facts.py  embed_messages.py  enable_wal_mode.py  graph_snapshot.py
tests/: test_context_summarizer.py  test_deduplicate_grouping.py  test_deduplicate_parser.py  test_deduplicate_prompts.py  test_early_stop.py  test_fact_formatter.py  test_fact_query_extraction.py  test_hybrid_search.py  test_ie_client.py  test_ie_models.py  test_ie_runner.py  test_ie_windowing.py  test_memory_agent_agent.py  test_memory_agent_conversation.py  test_memory_agent_embedding.py  test_memory_agent_llm.py  test_memory_agent_normalization.py  test_memory_agent_serialization.py  test_memory_agent_tools.py  test_memory_agent_tools_base.py  test_memory_agent_tools_utils.py  test_message_embedding_pipeline.py  test_message_formatter.py  test_message_hybrid_search.py  test_query_fallback.py  test_request_logger.py  test_semantic_search_messages.py  test_semantic_search_rrf.py  test_timestamps.py  test_tool_selection.py
(+3 files in other folders)
