[project]
name = "knowledge-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neo4j>=5.28.2",
    "orjson>=3.11.3",
    "pydantic>=2.11.9",
    "httpx>=0.27.0",
    "transformers",
    "sentence-transformers>=5.0.0",
    "datasketch>=1.6.5",
    "pytest>=8.3.3",
    "fastapi>=0.118.3",
    "uvicorn[standard]>=0.37.0",
    "langgraph>=0.6.10",
    "langchain>=0.3.27",
    "langchain-core>=0.3.79",
    "langchain-openai>=0.3.35",
    "python-dotenv>=1.1.1",
    "prometheus-client>=0.23.1",
    "langchain-anthropic>=0.3.22",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.56.0-Embedding-Gemma-preview" }

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest-httpx>=0.35.0",
]
